--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,9 @@
   box-sizing: border-box;
 }
 
-:root {
-  --light-gray: #dfdfe2;
-  --dark-blue: #701fcd;
-}
-
 body {
-  background-color: var(--dark-blue);
-  color: var(--light-gray);
+  background-color: #701fcd;
+  color: #dfdfe2;
 }
 
 main {
